--- a/DjvuApp/Dialogs/RenameDialog.xaml
+++ b/DjvuApp/Dialogs/RenameDialog.xaml
@@ -1,5 +1,5 @@
 <ContentDialog
-    x:Class="DjvuApp.RenameDialog"
+    x:Class="DjvuApp.Dialogs.RenameDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DjvuApp"
