--- a/DjvuApp/Dialogs/OutlineDialogInternal.xaml
+++ b/DjvuApp/Dialogs/OutlineDialogInternal.xaml
@@ -1,5 +1,5 @@
 <ContentDialog
-    x:Class="DjvuApp.Dialogs.OutlineDialog"
+    x:Class="DjvuApp.Dialogs.OutlineDialogInternal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
