Implemented ViewerPage view model, DocumentViewer control and little refactoring.

--- a/DjvuApp/App.xaml
+++ b/DjvuApp/App.xaml
@@ -12,5 +12,6 @@
         
         <common:ViewModelLocator x:Key="ViewModelLocator"/>
         <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <common:IsNotNullToVisibilityConverter x:Key="IsNotNullToVisibilityConverter"/>
     </Application.Resources>
 </Application>
