--- a/DjvuApp/Pages/ViewerPage.xaml
+++ b/DjvuApp/Pages/ViewerPage.xaml
@@ -2,66 +2,19 @@
     x:Class="DjvuApp.Pages.ViewerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DjvuApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:common="using:DjvuApp.Common"
+    xmlns:controls="using:DjvuApp.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    DataContext="{Binding ViewerViewModel, Source={StaticResource ViewModelLocator}}"
     Loaded="LoadedHandler">
 
-    <Grid>
-        <Grid.Resources>
-            <ControlTemplate TargetType='ListView' x:Key='zoomedInViewControlTemplate'>
-                <ScrollViewer x:Name='ScrollViewer'
-                        TabNavigation='Local'
-                        IsVerticalScrollChainingEnabled='False'
-                        IsHorizontalScrollChainingEnabled='False'
-                        HorizontalScrollMode='Enabled'
-                        IsHorizontalRailEnabled='true'
-                        HorizontalScrollBarVisibility='Auto'
-                        HorizontalSnapPointsType='None'
-                        VerticalScrollMode='Enabled'
-                        IsVerticalRailEnabled='true'
-                        VerticalScrollBarVisibility='Auto'
-                        VerticalSnapPointsType='None'
-                        ZoomMode='Enabled'
-                        MinZoomFactor="0.1"
-                        MaxZoomFactor="0.5">
-                    <ItemsPresenter HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <!--<ItemsPresenter.Transitions>
-                                            <TransitionCollection>
-                                                <EntranceThemeTransition IsStaggeringEnabled="True" FromVerticalOffset="120" />
-                                            </TransitionCollection>
-                                        </ItemsPresenter.Transitions>-->
-                    </ItemsPresenter>
-                </ScrollViewer>
-            </ControlTemplate>
-            <DataTemplate x:Key="zoomedInViewItemTemplate">
-                <Grid>
-                    <Image Source="{Binding Source}" HorizontalAlignment="Center" Height="{Binding Height}" Width="{Binding Width}"></Image>
-                </Grid>
-            </DataTemplate>
-            <ItemsPanelTemplate x:Key="zoomedInViewItemsPanelTemplate">
-                <VirtualizingStackPanel Orientation="Vertical"/>
-            </ItemsPanelTemplate>
-            <Style TargetType="ListView" x:Key="zoomedInViewStyle">
-                <Setter Property="ScrollViewer.IsHorizontalScrollChainingEnabled" Value="False" />
-                <Setter Property="IsItemClickEnabled" Value="False" />
-                <Setter Property="IsSwipeEnabled" Value="True" />
-                <Setter Property="SelectionMode" Value="None" />
-                <Setter Property="IncrementalLoadingTrigger" Value="Edge"/>
-                <Setter Property="DataFetchSize" Value="5"/>
-                <Setter Property="ItemTemplate" Value="{StaticResource zoomedInViewItemTemplate}"/>
-                <Setter Property="ItemsPanel" Value="{StaticResource zoomedInViewItemsPanelTemplate}"/>
-                <Setter Property="Template" Value="{StaticResource zoomedInViewControlTemplate}"/>
-            </Style>
-        </Grid.Resources>
-        <ListView
-            x:Name="listView"
-            Style="{StaticResource zoomedInViewStyle}"/>
-    </Grid>
+    <controls:DocumentViewer
+        Source="{Binding CurrentDocument}"
+        PageNumber="{Binding CurrentPageNumber}"/>
 
     <i:Interaction.Behaviors>
         <common:StatusBarBehavior
@@ -78,16 +31,15 @@
                     Label="bookmark"
                     Icon="Favorite"/>
                 <AppBarButton
-                    x:Name="outlineButton"
-                    Visibility="Collapsed"
+                    Visibility="{Binding Outline, Converter={StaticResource IsNotNullToVisibilityConverter}}"
                     Label="outline"
                     Icon="Bookmarks"
-                    Click="OutlineButtonClickHandler"/>
+                    Command="{Binding ShowOutlineCommand}"/>
             </CommandBar.PrimaryCommands>
             <CommandBar.SecondaryCommands>
                 <AppBarButton
                     Label="jump to page"
-                    Click="JumpToPageButtonClickHandler"/>
+                    Command="{Binding JumpToPageCommand}"/>
                 <AppBarButton
                     Label="bookmarks"/>
             </CommandBar.SecondaryCommands>
