--- a/DjvuApp/Themes/Generic.xaml
+++ b/DjvuApp/Themes/Generic.xaml
@@ -1,35 +1,68 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DjvuApp">
-
-    <Style TargetType="local:ZoomablePagePresenter">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="local:ZoomablePagePresenter">
-                    <Grid Background="White">
-                        <Image x:Name="ImageContainer"/>
-                    </Grid>
-                    <!--<Image x:Name="ImageContainer"/>-->
+    xmlns:controls="using:DjvuApp.Controls">
+    <ControlTemplate x:Name="DocumentViewerControlTemplate" TargetType="controls:DocumentViewer">
+        <Grid>
+            <Grid.Resources>
+                <ControlTemplate x:Key="DjvuViewControlTemplate" TargetType="ListView">
+                    <ScrollViewer x:Name="ScrollViewer"
+                        TabNavigation="Local"
+                        IsVerticalScrollChainingEnabled="False"
+                        IsHorizontalScrollChainingEnabled="False"
+                        HorizontalScrollMode="Enabled"
+                        IsHorizontalRailEnabled="true"
+                        HorizontalScrollBarVisibility="Auto"
+                        HorizontalSnapPointsType="None"
+                        VerticalScrollMode="Enabled"
+                        IsVerticalRailEnabled="true"
+                        VerticalScrollBarVisibility="Auto"
+                        VerticalSnapPointsType="None"
+                        ZoomMode="Enabled"
+                        MinZoomFactor="0.1"
+                        MaxZoomFactor="0.5">
+                        <ItemsPresenter 
+                            HorizontalAlignment="Center" 
+                            VerticalAlignment="Center"/>
+                    </ScrollViewer>
                 </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="local:DocumentViewer">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="local:DocumentViewer">
-                    <Grid>
-                        <ScrollViewer
-                            x:Name="ScrollViewer"
-                            ZoomMode="Enabled"
-                            MinZoomFactor="{TemplateBinding MinZoomFactor}"
-                            MaxZoomFactor="{TemplateBinding MaxZoomFactor}"
-                            HorizontalScrollBarVisibility="Auto"/>
-                    </Grid>
+                <DataTemplate x:Key="DjvuViewItemTemplate">
+                    <Image 
+                        Source="{Binding Source}" 
+                        HorizontalAlignment="Center" 
+                        Height="{Binding Height}" 
+                        Width="{Binding Width}"/>
+                </DataTemplate>
+                <ItemsPanelTemplate x:Key="DjvuViewItemsPanelTemplate">
+                    <VirtualizingStackPanel Orientation="Vertical"/>
+                </ItemsPanelTemplate>
+                <ControlTemplate x:Key="DjvuViewItemContainerTemplate" TargetType="ListViewItem">
+                    <ContentPresenter/>
                 </ControlTemplate>
-            </Setter.Value>
-        </Setter>
+                <Style x:Key="DjvuViewItemContainerStyle" TargetType="ListViewItem">
+                    <Setter Property="Template" Value="{StaticResource DjvuViewItemContainerTemplate}"/>
+                </Style>
+                <Style x:Key="DjvuViewStyle" TargetType="ListView">
+                    <Setter Property="ScrollViewer.IsHorizontalScrollChainingEnabled" Value="False" />
+                    <Setter Property="ScrollViewer.IsVerticalScrollChainingEnabled" Value="False"/>
+                    <Setter Property="IsItemClickEnabled" Value="False" />
+                    <Setter Property="IsSwipeEnabled" Value="True" />
+                    <Setter Property="SelectionMode" Value="None" />
+                    <Setter Property="IncrementalLoadingTrigger" Value="Edge"/>
+                    <Setter Property="DataFetchSize" Value="5"/>
+                    <Setter Property="ItemTemplate" Value="{StaticResource DjvuViewItemTemplate}"/>
+                    <Setter Property="ItemsPanel" Value="{StaticResource DjvuViewItemsPanelTemplate}"/>
+                    <Setter Property="Template" Value="{StaticResource DjvuViewControlTemplate}"/>
+                    <Setter Property="ItemContainerStyle" Value="{StaticResource DjvuViewItemContainerStyle}"/>
+                </Style>
+            </Grid.Resources>
+            <ListView
+                x:Name="listView"
+                Style="{StaticResource DjvuViewStyle}"/>
+        </Grid>
+    </ControlTemplate>
+
+    <Style TargetType="controls:DocumentViewer">
+        <Setter Property="Template" Value="{StaticResource DocumentViewerControlTemplate}"/>
     </Style>
 </ResourceDictionary>
