--- a/DjvuApp/Controls/DocumentViewer.xaml
+++ b/DjvuApp/Controls/DocumentViewer.xaml
@@ -38,13 +38,12 @@
             </ScrollViewer>
         </ControlTemplate>
         <DataTemplate x:Key="DjvuViewItemTemplate">
-            <Grid Margin="0,0,0,24" Background="Tan">
+            <Grid Margin="0,0,0,24" Background="{StaticResource PhoneChromeBrush}">
                 <Image 
                     Source="{Binding Source}" 
                     HorizontalAlignment="Center" 
                     Height="{Binding Height}" 
                     Width="{Binding Width}"/>
-                <TextBlock Text="{Binding PageNumber}" FontSize="120"/>
             </Grid>
         </DataTemplate>
         <ItemsPanelTemplate x:Key="DjvuViewItemsPanelTemplate">
