--- a/DjvuApp/App.xaml
+++ b/DjvuApp/App.xaml
@@ -3,13 +3,81 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="using:DjvuApp.Common"
+    xmlns:misc="using:DjvuApp.Misc"
     RequestedTheme="Light">
     <Application.Resources>
         <SolidColorBrush x:Key="ApplicationPageBackgroundThemeBrush" Color="#FFF4F4F4"/>
         <Color x:Key="PhoneAccentColor">#FF6A00FF</Color>
-        
-        <common:ViewModelLocator x:Key="ViewModelLocator"/>
+
+        <misc:ViewModelLocator x:Key="ViewModelLocator"/>
         <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <common:IsNotNullToVisibilityConverter x:Key="IsNotNullToVisibilityConverter"/>
+
+        <Style x:Key="FullScreenContentDialogStyle" TargetType="ContentDialog">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ContentDialog">
+                        <Border x:Name="Container">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="Orientation">
+                                    <VisualState x:Name="Portrait" />
+                                    <VisualState x:Name="Landscape">
+                                        <Storyboard>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Width" Storyboard.TargetName="ContentPanel" EnableDependentAnimation="True">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource ContentDialogContentLandscapeWidth}" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="HorizontalAlignment" Storyboard.TargetName="ContentPanel">
+                                                <DiscreteObjectKeyFrame KeyTime="0" Value="Left" />
+                                            </ObjectAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+
+                            <Grid x:Name="LayoutRoot">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Border x:Name="BackgroundElement" 
+                                        Background="{TemplateBinding Background}"
+                                        FlowDirection="LeftToRight">
+                                    <Border FlowDirection="{TemplateBinding FlowDirection}">
+                                        <Grid x:Name="ContentPanel">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" MinHeight="{ThemeResource ContentDialogTitleMinHeight}" />
+                                                <RowDefinition Height="*" MinHeight="{ThemeResource ContentDialogContentMinHeight}" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <ContentControl x:Name="Title"
+                                                            Margin="{ThemeResource ContentDialogTitleMargin}"
+                                                            Content="{TemplateBinding Title}"
+                                                            ContentTemplate="{TemplateBinding TitleTemplate}"
+                                                            FontSize="{StaticResource TextStyleExtraLargeFontSize}"
+                                                            FontFamily="{ThemeResource PhoneFontFamilyNormal}"
+                                                            FontWeight="SemiBold"
+                                                            Grid.ColumnSpan="2" />
+                                            <ContentPresenter x:Name="Content"
+                                                              ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                              Content="{TemplateBinding Content}"
+                                                              FontSize="{StaticResource TextStyleLargeFontSize}"
+                                                              FontFamily="{ThemeResource PhoneFontFamilyNormal}"
+                                                              Margin="{ThemeResource ContentDialogContentMargin}"
+                                                              Grid.Row="1"
+                                                              Grid.ColumnSpan="2" />
+                                            <Border x:Name="Button1Host" Padding="{ThemeResource ContentDialogButton1HostPadding}" Grid.Row="2" />
+                                            <Border x:Name="Button2Host" Padding="{ThemeResource ContentDialogButton2HostPadding}" Grid.Row="2" Grid.Column="1" />
+                                        </Grid>
+                                    </Border>
+                                </Border>
+                            </Grid >
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
