--- a/DjvuApp/Dialogs/Internal/OutlineDialogInternal.xaml
+++ b/DjvuApp/Dialogs/Internal/OutlineDialogInternal.xaml
@@ -1,5 +1,5 @@
 <ContentDialog
-    x:Class="DjvuApp.Dialogs.OutlineDialogInternal"
+    x:Class="DjvuApp.Dialogs.Internal.OutlineDialogInternal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,11 +7,11 @@
     xmlns:outline="using:DjvuApp.Model.Outline"
     mc:Ignorable="d"
     Title="{Binding Title}"
+    Style="{StaticResource FullScreenContentDialogStyle}"
     d:DataContext="{d:DesignInstance outline:FakeOutlineItem}">
 
     <ListView
         ItemsSource="{Binding Items}"
-        Height="500"
         ItemClick="ItemClickHandler"
         IsItemClickEnabled="True">
         <ItemsControl.ItemContainerStyle>
