--- a/DjvuApp/Dialogs/Internal/RenameDialogInternal.xaml
+++ b/DjvuApp/Dialogs/Internal/RenameDialogInternal.xaml
@@ -1,13 +1,12 @@
-﻿<ContentDialog
-    x:Class="DjvuApp.Dialogs.CreateBookmarkDialogInternal"
+<ContentDialog
+    x:Class="DjvuApp.Dialogs.Internal.RenameDialogInternal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="ADD BOOKMARK"
-    FullSizeDesired="False"
-    IsPrimaryButtonEnabled="{Binding CanSave}"
+    Title="RENAME"
+    FullSizeDesired="True"
     PrimaryButtonText="save"
     PrimaryButtonClick="SaveButtonClickHandler"
     SecondaryButtonText="cancel"
@@ -19,6 +18,6 @@
         <TextBox 
             TabIndex="0"
             Header="Name"
-            Text="{Binding BookmarkTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            Text="{Binding NewName, Mode=TwoWay}"/>
     </Grid>
 </ContentDialog>
