Fixed zooming bug, little code refactoring, added tile images and splash screen, associated package with store

--- a/DjvuApp/App.xaml
+++ b/DjvuApp/App.xaml
@@ -10,6 +10,7 @@
         <Color x:Key="PhoneAccentColor">#FF6A00FF</Color>
 
         <misc:ViewModelLocator x:Key="ViewModelLocator"/>
+        <common:StringFormatConverter x:Key="StringFormatConverter"/>
         <common:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
         <common:IsNotNullToVisibilityConverter x:Key="IsNotNullToVisibilityConverter"/>
 
